Fix arrow showing up as emoji on iOS and make close button slightly larger

--- a/rails/app/assets/stylesheets/components/card.scss
+++ b/rails/app/assets/stylesheets/components/card.scss
@@ -203,7 +203,7 @@ $el-shadow: 0 1px 4px #bbb;
       }
       .tab {
         &:after {
-          content: '▶';
+          content: '\25b6\fe0e';
         }
       }
     }
@@ -226,7 +226,7 @@ $el-shadow: 0 1px 4px #bbb;
       top: 0.5rem;
       color: black;
       font-family: sans-serif;
-      font-size: 1rem;
+      font-size: 1.25rem;
       cursor: pointer;
       z-index: 2;
   
